docs: Update docs

--- a/docs/latex/algorithms_8h_source.tex
+++ b/docs/latex/algorithms_8h_source.tex
@@ -94,27 +94,27 @@
 \DoxyCodeLine{00090\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}*\ reverse(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\ \&begin,\ \textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\ \&end);}
 \DoxyCodeLine{00091\ }
 \DoxyCodeLine{00092\ \ \ \ \ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ Callback>}
-\DoxyCodeLine{00093\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ \mbox{\hyperlink{conceptoriginal_1_1_comparable}{Comparable<TYPE>}}\ \&\&\ \mbox{\hyperlink{conceptoriginal_1_1_compare}{Compare<Callback,\ TYPE>}}}
+\DoxyCodeLine{00093\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ \mbox{\hyperlink{conceptoriginal_1_1_compare}{Compare<Callback,\ TYPE>}}}
 \DoxyCodeLine{00094\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ \textcolor{keywordtype}{bool}\ compare(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ it1,\ \textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ it2,\ \textcolor{keyword}{const}\ Callback\&\ compares);}
 \DoxyCodeLine{00095\ }
 \DoxyCodeLine{00096\ \ \ \ \ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ Callback>}
-\DoxyCodeLine{00097\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ \mbox{\hyperlink{conceptoriginal_1_1_comparable}{Comparable<TYPE>}}\ \&\&\ \mbox{\hyperlink{conceptoriginal_1_1_compare}{Compare<Callback,\ TYPE>}}}
+\DoxyCodeLine{00097\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ \mbox{\hyperlink{conceptoriginal_1_1_compare}{Compare<Callback,\ TYPE>}}}
 \DoxyCodeLine{00098\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ \textcolor{keywordtype}{void}\ heapAdjustDown(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ begin,\ \textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ range,}
 \DoxyCodeLine{00099\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ current,\ \textcolor{keyword}{const}\ Callback\&\ compares);}
 \DoxyCodeLine{00100\ }
 \DoxyCodeLine{00101\ \ \ \ \ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ Callback>}
-\DoxyCodeLine{00102\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ \mbox{\hyperlink{conceptoriginal_1_1_comparable}{Comparable<TYPE>}}\ \&\&\ \mbox{\hyperlink{conceptoriginal_1_1_compare}{Compare<Callback,\ TYPE>}}}
+\DoxyCodeLine{00102\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ \mbox{\hyperlink{conceptoriginal_1_1_compare}{Compare<Callback,\ TYPE>}}}
 \DoxyCodeLine{00103\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ \textcolor{keywordtype}{void}\ heapAdjustUp(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ begin,\ \textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ current,}
 \DoxyCodeLine{00104\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ Callback\&\ compares);}
 \DoxyCodeLine{00105\ }
 \DoxyCodeLine{00106\ \ \ \ \ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ Callback>}
-\DoxyCodeLine{00107\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ \mbox{\hyperlink{conceptoriginal_1_1_comparable}{Comparable<TYPE>}}\ \&\&\ \mbox{\hyperlink{conceptoriginal_1_1_compare}{Compare<Callback,\ TYPE>}}}
+\DoxyCodeLine{00107\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ \mbox{\hyperlink{conceptoriginal_1_1_compare}{Compare<Callback,\ TYPE>}}}
 \DoxyCodeLine{00108\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ \textcolor{keywordtype}{void}\ heapInit(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\ \&begin,\ \textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\ \&end,}
 \DoxyCodeLine{00109\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ Callback\&\ compares);}
 \DoxyCodeLine{00110\ }
 \DoxyCodeLine{00111\ \ \ \ \ \ \ \ \ \textcolor{keyword}{protected}:}
 \DoxyCodeLine{00112\ \ \ \ \ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ Callback>}
-\DoxyCodeLine{00113\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ \mbox{\hyperlink{conceptoriginal_1_1_comparable}{Comparable<TYPE>}}\ \&\&\ \mbox{\hyperlink{conceptoriginal_1_1_compare}{Compare<Callback,\ TYPE>}}}
+\DoxyCodeLine{00113\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ \mbox{\hyperlink{conceptoriginal_1_1_compare}{Compare<Callback,\ TYPE>}}}
 \DoxyCodeLine{00114\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}*\ heapGetPrior(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ begin,\ \textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ range,}
 \DoxyCodeLine{00115\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ parent,\ \textcolor{keyword}{const}\ Callback\&\ compares);}
 \DoxyCodeLine{00116\ }
@@ -249,35 +249,35 @@
 \DoxyCodeLine{00248\ \ \ \ \ \ \ \ \ \}}
 \DoxyCodeLine{00249\ }
 \DoxyCodeLine{00250\ \ \ \ \ \ \ \ \ \textcolor{keyword}{template}\ <\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ Callback>}
-\DoxyCodeLine{00251\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ original::Comparable<TYPE>\ \&\&\ original::Compare<Callback,\ TYPE>}
+\DoxyCodeLine{00251\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ original::Compare<Callback,\ TYPE>}
 \DoxyCodeLine{00252\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ \textcolor{keyword}{auto}\ compare(\textcolor{keyword}{const}\ iterator<TYPE>*\ it1,\ \textcolor{keyword}{const}\ iterator<TYPE>*\ it2,}
 \DoxyCodeLine{00253\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ Callback\&\ compares)\ -\/>\ \textcolor{keywordtype}{bool}\ \{}
 \DoxyCodeLine{00254\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ compare(*it1,\ *it2,\ compares);}
 \DoxyCodeLine{00255\ \ \ \ \ \ \ \ \ \}}
 \DoxyCodeLine{00256\ }
 \DoxyCodeLine{00257\ \ \ \ \ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ Callback>}
-\DoxyCodeLine{00258\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ original::Comparable<TYPE>\ \&\&\ original::Compare<Callback,\ TYPE>}
+\DoxyCodeLine{00258\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ original::Compare<Callback,\ TYPE>}
 \DoxyCodeLine{00259\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ \textcolor{keyword}{auto}\ heapAdjustDown(\textcolor{keyword}{const}\ iterator<TYPE>*\ begin,\ \textcolor{keyword}{const}\ iterator<TYPE>*\ range,}
 \DoxyCodeLine{00260\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ iterator<TYPE>*\ current,\ \textcolor{keyword}{const}\ Callback\&\ compares)\ -\/>\ \textcolor{keywordtype}{void}\ \{}
 \DoxyCodeLine{00261\ \ \ \ \ \ \ \ \ \ \ \ \ heapAdjustDown(*begin,\ *range,\ *current,\ compares);}
 \DoxyCodeLine{00262\ \ \ \ \ \ \ \ \ \}}
 \DoxyCodeLine{00263\ }
 \DoxyCodeLine{00264\ \ \ \ \ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ Callback>}
-\DoxyCodeLine{00265\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ original::Comparable<TYPE>\ \&\&\ original::Compare<Callback,\ TYPE>}
+\DoxyCodeLine{00265\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ original::Compare<Callback,\ TYPE>}
 \DoxyCodeLine{00266\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ \textcolor{keyword}{auto}\ heapAdjustUp(\textcolor{keyword}{const}\ iterator<TYPE>*\ begin,\ \textcolor{keyword}{const}\ iterator<TYPE>*\ current,}
 \DoxyCodeLine{00267\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ Callback\&\ compares)\ -\/>\ \textcolor{keywordtype}{void}\ \{}
 \DoxyCodeLine{00268\ \ \ \ \ \ \ \ \ \ \ \ \ heapAdjustUp(*begin,\ *current,\ compares);}
 \DoxyCodeLine{00269\ \ \ \ \ \ \ \ \ \}}
 \DoxyCodeLine{00270\ }
 \DoxyCodeLine{00271\ \ \ \ \ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ Callback>}
-\DoxyCodeLine{00272\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ original::Comparable<TYPE>\ \&\&\ original::Compare<Callback,\ TYPE>}
+\DoxyCodeLine{00272\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ original::Compare<Callback,\ TYPE>}
 \DoxyCodeLine{00273\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ \textcolor{keyword}{auto}\ heapInit(\textcolor{keyword}{const}\ iterator<TYPE>*\ begin,\ \textcolor{keyword}{const}\ iterator<TYPE>*\ end,}
 \DoxyCodeLine{00274\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ Callback\&\ compares)\ -\/>\ \textcolor{keywordtype}{void}\ \{}
 \DoxyCodeLine{00275\ \ \ \ \ \ \ \ \ \ \ \ \ heapInit(*begin,\ *end,\ compares);}
 \DoxyCodeLine{00276\ \ \ \ \ \ \ \ \ \}}
 \DoxyCodeLine{00277\ }
 \DoxyCodeLine{00278\ \ \ \ \ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ Callback>}
-\DoxyCodeLine{00279\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ original::Comparable<TYPE>\ \&\&\ original::Compare<Callback,\ TYPE>}
+\DoxyCodeLine{00279\ \ \ \ \ \ \ \ \ \textcolor{keyword}{requires}\ original::Compare<Callback,\ TYPE>}
 \DoxyCodeLine{00280\ \ \ \ \ \ \ \ \ \textcolor{keyword}{static}\ \textcolor{keyword}{auto}\ heapGetPrior(\textcolor{keyword}{const}\ iterator<TYPE>*\ begin,\ \textcolor{keyword}{const}\ iterator<TYPE>*\ range,}
 \DoxyCodeLine{00281\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ iterator<TYPE>*\ parent,\ \textcolor{keyword}{const}\ Callback\&\ compares)\ -\/>\ iterator<TYPE>*\ \{}
 \DoxyCodeLine{00282\ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keywordflow}{return}\ heapGetPrior(*begin,\ *range,\ *parent,\ compares);}
@@ -566,7 +566,7 @@
 \DoxyCodeLine{00565\ \ \ \ \ \}}
 \DoxyCodeLine{00566\ }
 \DoxyCodeLine{00567\ \ \ \ \ \textcolor{keyword}{template}\ <\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ Callback>}
-\DoxyCodeLine{00568\ \ \ \ \ \textcolor{keyword}{requires}\ original::Comparable<TYPE>\ \&\&\ original::Compare<Callback,\ TYPE>}
+\DoxyCodeLine{00568\ \ \ \ \ \textcolor{keyword}{requires}\ original::Compare<Callback,\ TYPE>}
 \DoxyCodeLine{00569\ \ \ \ \ \textcolor{keyword}{auto}\ original::algorithms::compare(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ it1,\ \textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ it2,}
 \DoxyCodeLine{00570\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ Callback\&\ compares)\ -\/>\ \textcolor{keywordtype}{bool}}
 \DoxyCodeLine{00571\ \ \ \ \ \{}
@@ -574,7 +574,7 @@
 \DoxyCodeLine{00573\ \ \ \ \ \}}
 \DoxyCodeLine{00574\ }
 \DoxyCodeLine{00575\ \ \ \ \ \textcolor{keyword}{template}\ <\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ Callback>}
-\DoxyCodeLine{00576\ \ \ \ \ \textcolor{keyword}{requires}\ original::Comparable<TYPE>\ \&\&\ original::Compare<Callback,\ TYPE>}
+\DoxyCodeLine{00576\ \ \ \ \ \textcolor{keyword}{requires}\ original::Compare<Callback,\ TYPE>}
 \DoxyCodeLine{00577\ \ \ \ \ \textcolor{keyword}{auto}\ original::algorithms::heapAdjustDown(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ begin,\ \textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ range,}
 \DoxyCodeLine{00578\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ current,\ \textcolor{keyword}{const}\ Callback\&\ compares)\ -\/>\ \textcolor{keywordtype}{void}}
 \DoxyCodeLine{00579\ \ \ \ \ \{}
@@ -599,7 +599,7 @@
 \DoxyCodeLine{00598\ \ \ \ \ \}}
 \DoxyCodeLine{00599\ }
 \DoxyCodeLine{00600\ \ \ \ \ \textcolor{keyword}{template}\ <\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ Callback>}
-\DoxyCodeLine{00601\ \ \ \ \ \textcolor{keyword}{requires}\ original::Comparable<TYPE>\ \&\&\ original::Compare<Callback,\ TYPE>}
+\DoxyCodeLine{00601\ \ \ \ \ \textcolor{keyword}{requires}\ original::Compare<Callback,\ TYPE>}
 \DoxyCodeLine{00602\ \ \ \ \ \textcolor{keyword}{auto}\ original::algorithms::heapAdjustUp(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ begin,\ \textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ current,}
 \DoxyCodeLine{00603\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ Callback\&\ compares)\ -\/>\ \textcolor{keywordtype}{void}}
 \DoxyCodeLine{00604\ \ \ \ \ \{}
@@ -621,7 +621,7 @@
 \DoxyCodeLine{00620\ \ \ \ \ \}}
 \DoxyCodeLine{00621\ }
 \DoxyCodeLine{00622\ \ \ \ \ \textcolor{keyword}{template}\ <\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ Callback>}
-\DoxyCodeLine{00623\ \ \ \ \ \textcolor{keyword}{requires}\ original::Comparable<TYPE>\ \&\&\ original::Compare<Callback,\ TYPE>}
+\DoxyCodeLine{00623\ \ \ \ \ \textcolor{keyword}{requires}\ original::Compare<Callback,\ TYPE>}
 \DoxyCodeLine{00624\ \ \ \ \ \textcolor{keyword}{auto}\ original::algorithms::heapInit(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ begin,\ \textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ end,}
 \DoxyCodeLine{00625\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ Callback\&\ compares)\ -\/>\ \textcolor{keywordtype}{void}}
 \DoxyCodeLine{00626\ \ \ \ \ \{}
@@ -634,7 +634,7 @@
 \DoxyCodeLine{00633\ \ \ \ \ \}}
 \DoxyCodeLine{00634\ }
 \DoxyCodeLine{00635\ \ \ \ \ \textcolor{keyword}{template}\ <\textcolor{keyword}{typename}\ TYPE,\ \textcolor{keyword}{typename}\ Callback>}
-\DoxyCodeLine{00636\ \ \ \ \ \textcolor{keyword}{requires}\ original::Comparable<TYPE>\ \&\&\ original::Compare<Callback,\ TYPE>}
+\DoxyCodeLine{00636\ \ \ \ \ \textcolor{keyword}{requires}\ original::Compare<Callback,\ TYPE>}
 \DoxyCodeLine{00637\ \ \ \ \ \textcolor{keyword}{auto}\ original::algorithms::heapGetPrior(\textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ begin,\ \textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ range,}
 \DoxyCodeLine{00638\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \textcolor{keyword}{const}\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}\&\ parent,\ \textcolor{keyword}{const}\ Callback\&\ compares)\ -\/>\ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator<TYPE>}}*}
 \DoxyCodeLine{00639\ \ \ \ \ \{}
