--- a/docs/latex/classoriginal_1_1algorithms.tex
+++ b/docs/latex/classoriginal_1_1algorithms.tex
@@ -2,8 +2,7 @@
 \hypertarget{classoriginal_1_1algorithms}{}\label{classoriginal_1_1algorithms}\index{original::algorithms@{original::algorithms}}
 
 
-Collaboration diagram for original\+::algorithms\+:
-\nopagebreak
+Collaboration diagram for original\+::algorithms\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -73,25 +72,25 @@ requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition
 \Hypertarget{classoriginal_1_1algorithms_a8aeee5f50c8a1e074c3fada4343701fd}\label{classoriginal_1_1algorithms_a8aeee5f50c8a1e074c3fada4343701fd} 
 {\footnotesize template$<$typename TYPE$>$ }\\auto {\bfseries reverse} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
 \item 
-\Hypertarget{classoriginal_1_1algorithms_aa4c257041a405375712de41f52ec6ed1}\label{classoriginal_1_1algorithms_aa4c257041a405375712de41f52ec6ed1} 
+\Hypertarget{classoriginal_1_1algorithms_ab042fe17a74cecf56c13fcfac5ec4b3e}\label{classoriginal_1_1algorithms_ab042fe17a74cecf56c13fcfac5ec4b3e} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
-requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\auto {\bfseries compare} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&it1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&it2, const Callback \&compares) -\/$>$ bool
+requires \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\auto {\bfseries compare} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&it1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&it2, const Callback \&compares) -\/$>$ bool
 \item 
-\Hypertarget{classoriginal_1_1algorithms_ad4be2e07409a914431bc657b497bd44c}\label{classoriginal_1_1algorithms_ad4be2e07409a914431bc657b497bd44c} 
+\Hypertarget{classoriginal_1_1algorithms_a552618a34a5dc2ff6a591a4dacfc4a26}\label{classoriginal_1_1algorithms_a552618a34a5dc2ff6a591a4dacfc4a26} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
-requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\auto {\bfseries heap\+Adjust\+Down} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&current, const Callback \&compares) -\/$>$ void
+requires \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\auto {\bfseries heap\+Adjust\+Down} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&current, const Callback \&compares) -\/$>$ void
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a2c61d172f1a1bb6e401f19cf0dcef4c6}\label{classoriginal_1_1algorithms_a2c61d172f1a1bb6e401f19cf0dcef4c6} 
+\Hypertarget{classoriginal_1_1algorithms_af1ab1ef32e3f82af8f424f672f86b65a}\label{classoriginal_1_1algorithms_af1ab1ef32e3f82af8f424f672f86b65a} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
-requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\auto {\bfseries heap\+Adjust\+Up} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&current, const Callback \&compares) -\/$>$ void
+requires \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\auto {\bfseries heap\+Adjust\+Up} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&current, const Callback \&compares) -\/$>$ void
 \item 
-\Hypertarget{classoriginal_1_1algorithms_ac1e484320c088e1b53c3817b91944a0b}\label{classoriginal_1_1algorithms_ac1e484320c088e1b53c3817b91944a0b} 
+\Hypertarget{classoriginal_1_1algorithms_a990b93fa1aec888620d21a0fba0b8784}\label{classoriginal_1_1algorithms_a990b93fa1aec888620d21a0fba0b8784} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
-requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\auto {\bfseries heap\+Init} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&compares) -\/$>$ void
+requires \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\auto {\bfseries heap\+Init} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&compares) -\/$>$ void
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a926273b74138a74bd51f0fdc67f409f2}\label{classoriginal_1_1algorithms_a926273b74138a74bd51f0fdc67f409f2} 
+\Hypertarget{classoriginal_1_1algorithms_af3e20e3a7012b5ed25da9a3145ea79e3}\label{classoriginal_1_1algorithms_af3e20e3a7012b5ed25da9a3145ea79e3} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
-requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\auto {\bfseries heap\+Get\+Prior} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&parent, const Callback \&compares) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
+requires \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\auto {\bfseries heap\+Get\+Prior} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&parent, const Callback \&compares) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
 \end{DoxyCompactItemize}
 \doxysubsubsection*{Static Public Member Functions}
 \begin{DoxyCompactItemize}
@@ -168,21 +167,21 @@ requires Condition$<$Callback, TYPE$>$}\\static \mbox{\hyperlink{classoriginal_1
 \Hypertarget{classoriginal_1_1algorithms_a5d6cd7b121c4a3b84e4f7264fdea3295}\label{classoriginal_1_1algorithms_a5d6cd7b121c4a3b84e4f7264fdea3295} 
 {\footnotesize template$<$typename TYPE$>$ }\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries reverse} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end)
 \item 
-\Hypertarget{classoriginal_1_1algorithms_af8f5053253bbcf421b9780d3e73df99d}\label{classoriginal_1_1algorithms_af8f5053253bbcf421b9780d3e73df99d} 
+\Hypertarget{classoriginal_1_1algorithms_ac9d0df0d454e332179deebc2a42f2492}\label{classoriginal_1_1algorithms_ac9d0df0d454e332179deebc2a42f2492} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
-requires Comparable$<$TYPE$>$ \&\& Compare$<$Callback, TYPE$>$}\\static bool {\bfseries compare} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&it1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&it2, const Callback \&compares)
+requires Compare$<$Callback, TYPE$>$}\\static bool {\bfseries compare} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&it1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&it2, const Callback \&compares)
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a17b9eb972676db682be5c0cbfb8f119b}\label{classoriginal_1_1algorithms_a17b9eb972676db682be5c0cbfb8f119b} 
+\Hypertarget{classoriginal_1_1algorithms_ae9a4b125bd1e64db8e2eae368e94b013}\label{classoriginal_1_1algorithms_ae9a4b125bd1e64db8e2eae368e94b013} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
-requires Comparable$<$TYPE$>$ \&\& Compare$<$Callback, TYPE$>$}\\static void {\bfseries heap\+Adjust\+Down} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&current, const Callback \&compares)
+requires Compare$<$Callback, TYPE$>$}\\static void {\bfseries heap\+Adjust\+Down} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&current, const Callback \&compares)
 \item 
-\Hypertarget{classoriginal_1_1algorithms_ad892ecea662a755f127c150183bd6805}\label{classoriginal_1_1algorithms_ad892ecea662a755f127c150183bd6805} 
+\Hypertarget{classoriginal_1_1algorithms_a7d8ce5945945f02fa1b4095bbff19f0c}\label{classoriginal_1_1algorithms_a7d8ce5945945f02fa1b4095bbff19f0c} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
-requires Comparable$<$TYPE$>$ \&\& Compare$<$Callback, TYPE$>$}\\static void {\bfseries heap\+Adjust\+Up} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&current, const Callback \&compares)
+requires Compare$<$Callback, TYPE$>$}\\static void {\bfseries heap\+Adjust\+Up} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&current, const Callback \&compares)
 \item 
-\Hypertarget{classoriginal_1_1algorithms_aedc700ae3498b632ac8314133e5c42dc}\label{classoriginal_1_1algorithms_aedc700ae3498b632ac8314133e5c42dc} 
+\Hypertarget{classoriginal_1_1algorithms_a2336bd54f1be8f54d604af00af47bfeb}\label{classoriginal_1_1algorithms_a2336bd54f1be8f54d604af00af47bfeb} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
-requires Comparable$<$TYPE$>$ \&\& Compare$<$Callback, TYPE$>$}\\static void {\bfseries heap\+Init} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&compares)
+requires Compare$<$Callback, TYPE$>$}\\static void {\bfseries heap\+Init} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&end, const Callback \&compares)
 \end{DoxyCompactItemize}
 \doxysubsubsection*{Protected Member Functions}
 \begin{DoxyCompactItemize}
@@ -192,9 +191,9 @@ requires Comparable$<$TYPE$>$ \&\& Compare$<$Callback, TYPE$>$}\\static void {\b
 \doxysubsubsection*{Static Protected Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\Hypertarget{classoriginal_1_1algorithms_ad86486c04fc5bb68660fd47a0812948d}\label{classoriginal_1_1algorithms_ad86486c04fc5bb68660fd47a0812948d} 
+\Hypertarget{classoriginal_1_1algorithms_ab7c78e2079e69f94affe154ee6cd3493}\label{classoriginal_1_1algorithms_ab7c78e2079e69f94affe154ee6cd3493} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
-requires Comparable$<$TYPE$>$ \&\& Compare$<$Callback, TYPE$>$}\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries heap\+Get\+Prior} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&parent, const Callback \&compares)
+requires Compare$<$Callback, TYPE$>$}\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries heap\+Get\+Prior} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \&parent, const Callback \&compares)
 \item 
 \Hypertarget{classoriginal_1_1algorithms_a60133870e09b4b6f77f5cd294addcbe7}\label{classoriginal_1_1algorithms_a60133870e09b4b6f77f5cd294addcbe7} 
 {\footnotesize template$<$typename TYPE$>$ }\\static \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*} {\bfseries front\+Of} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}it, int64\+\_\+t steps)
@@ -265,25 +264,25 @@ requires \mbox{\hyperlink{conceptoriginal_1_1_condition}{original\+::\+Condition
 \Hypertarget{classoriginal_1_1algorithms_ab946814272f2fc5c9650fbc4c8cc069a}\label{classoriginal_1_1algorithms_ab946814272f2fc5c9650fbc4c8cc069a} 
 {\footnotesize template$<$typename TYPE$>$ }\\static auto {\bfseries reverse} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
 \item 
-\Hypertarget{classoriginal_1_1algorithms_ae853412caa9f8234a88b7da7d706e4cf}\label{classoriginal_1_1algorithms_ae853412caa9f8234a88b7da7d706e4cf} 
+\Hypertarget{classoriginal_1_1algorithms_a660f6c4e37e61869faed4795b2a34f42}\label{classoriginal_1_1algorithms_a660f6c4e37e61869faed4795b2a34f42} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
-requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries compare} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}it1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}it2, const Callback \&compares) -\/$>$ bool
+requires \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries compare} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}it1, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}it2, const Callback \&compares) -\/$>$ bool
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a1dd6ebd7418c7c084564dc17f3de6431}\label{classoriginal_1_1algorithms_a1dd6ebd7418c7c084564dc17f3de6431} 
+\Hypertarget{classoriginal_1_1algorithms_a4c8855328d884eee4237e39ca36d97ff}\label{classoriginal_1_1algorithms_a4c8855328d884eee4237e39ca36d97ff} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
-requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries heap\+Adjust\+Down} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}current, const Callback \&compares) -\/$>$ void
+requires \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries heap\+Adjust\+Down} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}current, const Callback \&compares) -\/$>$ void
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a966a9beaa104ac64971fd69304538712}\label{classoriginal_1_1algorithms_a966a9beaa104ac64971fd69304538712} 
+\Hypertarget{classoriginal_1_1algorithms_a91656931d4542088215d850184bba2fe}\label{classoriginal_1_1algorithms_a91656931d4542088215d850184bba2fe} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
-requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries heap\+Adjust\+Up} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}current, const Callback \&compares) -\/$>$ void
+requires \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries heap\+Adjust\+Up} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}current, const Callback \&compares) -\/$>$ void
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a1ba4548cc7c6cd0fc520a4c19b525ef2}\label{classoriginal_1_1algorithms_a1ba4548cc7c6cd0fc520a4c19b525ef2} 
+\Hypertarget{classoriginal_1_1algorithms_a1830f8c29e9cab568ec403d9be9a5531}\label{classoriginal_1_1algorithms_a1830f8c29e9cab568ec403d9be9a5531} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
-requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries heap\+Init} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const Callback \&compares) -\/$>$ void
+requires \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries heap\+Init} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}end, const Callback \&compares) -\/$>$ void
 \item 
-\Hypertarget{classoriginal_1_1algorithms_a26b9a5c5bfd5356e7bc9ac9973338106}\label{classoriginal_1_1algorithms_a26b9a5c5bfd5356e7bc9ac9973338106} 
+\Hypertarget{classoriginal_1_1algorithms_a21fb5bca0873fba4f086ee1c8c2510d0}\label{classoriginal_1_1algorithms_a21fb5bca0873fba4f086ee1c8c2510d0} 
 {\footnotesize template$<$typename TYPE, typename Callback$>$ \newline
-requires \mbox{\hyperlink{conceptoriginal_1_1_comparable}{original\+::\+Comparable}}$<$TYPE$>$ \&\& \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries heap\+Get\+Prior} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}parent, const Callback \&compares) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
+requires \mbox{\hyperlink{conceptoriginal_1_1_compare}{original\+::\+Compare}}$<$Callback, TYPE$>$}\\static auto {\bfseries heap\+Get\+Prior} (const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}begin, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}range, const \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}parent, const Callback \&compares) -\/$>$ \mbox{\hyperlink{classoriginal_1_1iterator}{iterator}}$<$ TYPE $>$ \texorpdfstring{$\ast$}{*}
 \end{DoxyCompactItemize}
 
 
