--- a/docs/latex/classoriginal_1_1array.tex
+++ b/docs/latex/classoriginal_1_1array.tex
@@ -2,7 +2,8 @@
 \hypertarget{classoriginal_1_1array}{}\label{classoriginal_1_1array}\index{original::array$<$ TYPE $>$@{original::array$<$ TYPE $>$}}
 
 
-Inheritance diagram for original\+::array\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:\nopagebreak
+Inheritance diagram for original\+::array\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -11,7 +12,8 @@ Inheritance diagram for original\+::array\texorpdfstring{$<$}{<} TYPE \texorpdfs
 \end{figure}
 
 
-Collaboration diagram for original\+::array\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:\nopagebreak
+Collaboration diagram for original\+::array\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -37,6 +39,12 @@ class \mbox{\hyperlink{classoriginal_1_1array_1_1_iterator}{Iterator}}
 \item 
 \Hypertarget{classoriginal_1_1array_a1d21cd76a6990ea0ca823ad426f3c315}\label{classoriginal_1_1array_a1d21cd76a6990ea0ca823ad426f3c315} 
 \mbox{\hyperlink{classoriginal_1_1array}{array}} \& {\bfseries operator=} (const \mbox{\hyperlink{classoriginal_1_1array}{array}} \&other)
+\item 
+\Hypertarget{classoriginal_1_1array_a71a3d9eab34ca34d812abe1cc60c9f23}\label{classoriginal_1_1array_a71a3d9eab34ca34d812abe1cc60c9f23} 
+{\bfseries array} (\mbox{\hyperlink{classoriginal_1_1array}{array}} \&\&other) noexcept
+\item 
+\Hypertarget{classoriginal_1_1array_a9935a98f87e9911cd2253b7c2d4b9d38}\label{classoriginal_1_1array_a9935a98f87e9911cd2253b7c2d4b9d38} 
+\mbox{\hyperlink{classoriginal_1_1array}{array}} \& {\bfseries operator=} (\mbox{\hyperlink{classoriginal_1_1array}{array}} \&\&other) noexcept
 \item 
 \Hypertarget{classoriginal_1_1array_a37d679c855e86d8ef716efb2cd8bc608}\label{classoriginal_1_1array_a37d679c855e86d8ef716efb2cd8bc608} 
 bool {\bfseries operator==} (const \mbox{\hyperlink{classoriginal_1_1array}{array}} \&other) const
