--- a/docs/latex/classoriginal_1_1printable.tex
+++ b/docs/latex/classoriginal_1_1printable.tex
@@ -2,7 +2,8 @@
 \hypertarget{classoriginal_1_1printable}{}\label{classoriginal_1_1printable}\index{original::printable@{original::printable}}
 
 
-Inheritance diagram for original\+::printable\+:\nopagebreak
+Inheritance diagram for original\+::printable\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
