--- a/docs/latex/classoriginal_1_1serial.tex
+++ b/docs/latex/classoriginal_1_1serial.tex
@@ -2,7 +2,8 @@
 \hypertarget{classoriginal_1_1serial}{}\label{classoriginal_1_1serial}\index{original::serial$<$ TYPE $>$@{original::serial$<$ TYPE $>$}}
 
 
-Inheritance diagram for original\+::serial\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:\nopagebreak
+Inheritance diagram for original\+::serial\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
