--- a/docs/latex/classoriginal_1_1container.tex
+++ b/docs/latex/classoriginal_1_1container.tex
@@ -2,7 +2,8 @@
 \hypertarget{classoriginal_1_1container}{}\label{classoriginal_1_1container}\index{original::container$<$ TYPE $>$@{original::container$<$ TYPE $>$}}
 
 
-Inheritance diagram for original\+::container\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:\nopagebreak
+Inheritance diagram for original\+::container\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
