--- a/docs/latex/classoriginal_1_1iterable.tex
+++ b/docs/latex/classoriginal_1_1iterable.tex
@@ -2,7 +2,8 @@
 \hypertarget{classoriginal_1_1iterable}{}\label{classoriginal_1_1iterable}\index{original::iterable$<$ TYPE $>$@{original::iterable$<$ TYPE $>$}}
 
 
-Inheritance diagram for original\+::iterable\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:\nopagebreak
+Inheritance diagram for original\+::iterable\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
