--- a/docs/latex/classoriginal_1_1iteration_stream.tex
+++ b/docs/latex/classoriginal_1_1iteration_stream.tex
@@ -2,7 +2,8 @@
 \hypertarget{classoriginal_1_1iteration_stream}{}\label{classoriginal_1_1iteration_stream}\index{original::iterationStream$<$ TYPE $>$@{original::iterationStream$<$ TYPE $>$}}
 
 
-Inheritance diagram for original\+::iteration\+Stream\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:\nopagebreak
+Inheritance diagram for original\+::iteration\+Stream\texorpdfstring{$<$}{<} TYPE \texorpdfstring{$>$}{>}\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
