--- a/docs/latex/maths_8h_source.tex
+++ b/docs/latex/maths_8h_source.tex
@@ -8,8 +8,8 @@
 \DoxyCodeLine{00004\ }
 \DoxyCodeLine{00005\ \textcolor{keyword}{namespace\ }original\{}
 \DoxyCodeLine{00006\ }
-\DoxyCodeLine{00007\ \textcolor{preprocessor}{\ \ \ \ \#define\ E\ 2.7182818284590452353602874713527}}
-\DoxyCodeLine{00008\ \textcolor{preprocessor}{\ \ \ \ \#define\ PI\ 3.1415926535897932384626433832795}}
+\DoxyCodeLine{00007\ \ \ \ \ \textcolor{keyword}{constexpr}\ \textcolor{keywordtype}{long}\ \textcolor{keywordtype}{double}\ E\ =\ 2.7182818284590452353602874713526624977572470937000L;}
+\DoxyCodeLine{00008\ \ \ \ \ \textcolor{keyword}{constexpr}\ \textcolor{keywordtype}{long}\ \textcolor{keywordtype}{double}\ PI\ =\ 3.1415926535897932384626433832795028841971693993751L;}
 \DoxyCodeLine{00009\ }
 \DoxyCodeLine{00010\ \ \ \ \ \textcolor{keyword}{template}<\textcolor{keyword}{typename}\ TYPE>}
 \DoxyCodeLine{00011\ \ \ \ \ TYPE\ abs(TYPE\ a);}
